Login page style

--- a/EducationSystem/website/templates/website/profile.html
+++ b/EducationSystem/website/templates/website/profile.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Random website</title>
+    <title>Profile page</title>
 
     <style rel="stylesheet">
       table {
@@ -37,7 +37,7 @@
 
     <button>Add Message</button>
     <!-- <input type="submit" value='Add Message'> -->
-  <!-- </form> --> 
+  <!-- </form> -->
 
   <h1>In session:</h1>
 
