--- a/EducationSystem/website/templates/website/index.html
+++ b/EducationSystem/website/templates/website/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>CS Grad Helper</title>
+    <title>Education System</title>
     <style>
       * {
         margin: 0;
